# Adaptive-ROI-LiDAR

./: .gitignore  README.md
config/: graduation_paper.rviz  lidar.ini  preprocessing.ini
src/preprocessing/multi_lidar_combiner/: CMakeLists.txt  package.xml
src/preprocessing/multi_lidar_combiner/include/: multi_lidar_combiner.h
src/preprocessing/multi_lidar_combiner/launch/: processed_three_lidar_combiner.launch  raw_three_lidar_combiner.launch  tf.launch
src/preprocessing/multi_lidar_combiner/node/: multi_lidar_combiner_node.cpp
src/preprocessing/multi_lidar_combiner/src/: multi_lidar_combiner.cpp
src/preprocessing/three_lidar_roi/: CMakeLists.txt  package.xml
src/preprocessing/three_lidar_roi/include/: three_lidar_roi_config.hpp
src/preprocessing/three_lidar_roi/include/left_lidar/: left_lidar_roi.hpp
src/preprocessing/three_lidar_roi/include/rear_lidar/: rear_lidar_roi.hpp
src/preprocessing/three_lidar_roi/include/right_lidar/: right_lidar_roi.hpp
src/preprocessing/three_lidar_roi/launch/: left_lidar_roi.launch  rear_lidar_roi.launch  right_lidar_roi.launch  three_lidar_roi.launch
src/preprocessing/three_lidar_roi/src/left_lidar/: left_lidar_roi.cpp  left_lidar_roi_node.cpp
src/preprocessing/three_lidar_roi/src/rear_lidar/: rear_lidar_roi.cpp  rear_lidar_roi_node.cpp
src/preprocessing/three_lidar_roi/src/right_lidar/: right_lidar_roi.cpp  right_lidar_roi_node.cpp
src/simulation/bounding_box/: CMakeLists.txt  package.xml
src/simulation/bounding_box/include/: bounding_box.hpp
src/simulation/bounding_box/launch/: bounding_box.launch
src/simulation/bounding_box/src/: bounding_box.cpp  bounding_box_node.cpp
