<?xml version="1.0"?>
<package format="2">
  <name>multi_lidar_combiner_pkg</name>
  <version>0.0.0</version>
  <description>The muilt lidar combiner package</description>

  <maintainer email="sbahn42@adasone.com">Ahn damgi</maintainer>


  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>yaml-cpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>pcl_ros</build_export_depend>
  <build_export_depend>pcl_conversions</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>yaml-cpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>pcl_conversions</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>yaml-cpp</exec_depend>

  <export>

  </export>
</package>
